Fix style/coding issues found by various Maven projects